--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -16,7 +16,7 @@ mypy_type_checking: none
 package_name: gundam
 project_license: none
 project_name: gundam
-project_organization: lincc-frameworks-mask-incubator
+project_organization: samotracio
 python_versions:
 - '3.10'
 - '3.11'
