--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: Build and publish wheels
 
 on:
   release:
@@ -16,22 +16,59 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
+  build_wheels:
+    name: Wheels on ${{ matrix.os }} with CIBW_ARCHS=${{ matrix.archs }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          # Numpy provides wheels for x86_64 and aarch64 only, we do the same
+          - os: ubuntu-latest
+            archs: x86_64 aarch64
+          - os: macos-latest
+            archs: x86_64
+          # Windows is not supported yet
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up QEMU
+      if: ${{ runner.os == 'Linux' }}
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: all
+    - uses: fortran-lang/setup-fortran@v1
+      id: setup-fortran
+      with:
+        compiler: gcc
+        version: 11
+    - name: Build wheels
+      uses: pypa/cibuildwheel@v2.16.2
+      env:
+        CIBW_ARCHS: ${{ matrix.archs }}
+    - uses: actions/upload-artifact@v3
+      with:
+        path: wheelhouse/*.whl
 
+  make_sdist:
+    name: Make SDist
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build SDist
+      run: pipx run build --sdist
+    - uses: actions/upload-artifact@v3
+      with:
+        path: dist/*.tar.gz
+
+  publish:
+    needs: [ build_wheels, make_sdist ]
     runs-on: ubuntu-latest
     permissions:
       id-token: write
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - uses: actions/download-artifact@v3
       with:
-        python-version: '3.10'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
-    - name: Build package
-      run: python -m build
+        name: artifact
+        path: dist
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
