--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -22,13 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          # Numpy provides wheels for x86_64 and aarch64 only, we do the same
-          - os: ubuntu-latest
-            archs: x86_64 aarch64
-          - os: macos-latest
-            archs: x86_64
-          # Windows is not supported yet
+        os: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
     steps:
     - uses: actions/checkout@v3
     - name: Set up QEMU
@@ -42,10 +36,10 @@ jobs:
         compiler: gcc
         version: 11
     - name: Build wheels
-      uses: pypa/cibuildwheel@v2.16.2
+      uses: pypa/cibuildwheel@v2.18.1
       env:
         CIBW_ARCHS: ${{ matrix.archs }}
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         path: wheelhouse/*.whl
 
@@ -53,10 +47,10 @@ jobs:
     name: Make SDist
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Build SDist
       run: pipx run build --sdist
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         path: dist/*.tar.gz
 
@@ -66,7 +60,7 @@ jobs:
     permissions:
       id-token: write
     steps:
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: artifact
         path: dist
