--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -72,6 +72,7 @@ jobs:
       uses: pypa/cibuildwheel@v2.18.1
     - uses: actions/upload-artifact@v4
       with:
+        name: artifact_${{ matrix.cibw_build }}
         path: wheelhouse/*.whl
 
   make_sdist:
@@ -83,7 +84,7 @@ jobs:
       run: pipx run build --sdist
     - uses: actions/upload-artifact@v4
       with:
-        name: artifact-${{ matrix.cibw_build }}
+        name: artifact_sdist
         path: dist/*.tar.gz
 
   publish:
@@ -94,7 +95,8 @@ jobs:
     steps:
     - uses: actions/download-artifact@v4
       with:
-        name: artifact-${{ matrix.cibw_build }}
+        pattern: artifact_*
+        merge_multiple: true
         path: dist
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
