--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -87,7 +87,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         pattern: artifact_*
-        merge_multiple: true
+        merge-multiple: true
         path: dist
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
