--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "gundam-test"
+name = "gundamtest"
 license = {file = "LICENSE"}
 readme = "README.md"
 authors = [
@@ -97,11 +97,11 @@ ignore = [
 ]
 
 [tool.coverage.run]
-omit=["src/gundam/_version.py"]
+omit=["src/gundamtest/_version.py"]
 
 [tool.scikit-build]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
-sdist.include = ["src/gundam/_version.py"]
+sdist.include = ["src/gundamtest/_version.py"]
 
 [tool.setuptools_scm]
-write_to = "src/gundam/_version.py"
+write_to = "src/gundamtest/_version.py"
